--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,6 @@
   margin: 80px auto $base-margin auto;
   padding: 0 2 * $base-padding 2 * $base-padding 2 * $base-padding;
 
-  width: 960px;
+  width: 70%;
   background-color: $white;
 }
